# video-cutter

./: .gitignore  Cargo.toml  build.py  input.json  readme.md
src/: build.rs  console.rs  input.rs  main.rs
