[package]
name = "video-cutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[package.metadata.winresource]
ProductName = "Video Cutter"
LegalCopyright = "Copyright © 2024"

[build-dependencies]
winresource = "0.1.14"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
#zip = "0.6.4"
